# Ledgerlens-data

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES_197_205.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_178_179_180_181.md  Makefile  PR_DESCRIPTION_266.md  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
alerts/: __init__.py
config/: __init__.py
data/: causal_priors.yaml  dataset_card.md  feature_dictionary.md  feature_ranges.json  reservoir_sampler.py  schema_evolution.md
detection/: __init__.py  audit_trail.py  benford_drift_detector.py  benford_engine.py  benford_window_optimizer.py  causal_discovery.py  community_detector.py  counterfactual_explainer.py  cross_venue_features.py  feature_cache.py  feature_engineering.py  forensic_report.py  gnn_encoder.py  hyperparameter_search.py  meta_learner.py  model_inference.py  model_training.py  motif_census.py  mpc_aggregator.py  per_pair_metrics.py  persistence.py  risk_score_store.py  shap_explainer.py  threshold_rl.py  trade_sequence_transformer.py  wallet_graph.py
docs/: active_learning.md  adversarial_robustness.md  alerting.md  causal_inference.md  conformal_prediction_integration.md  contributor_feature_guide.md  developer_quickstart.md  edge_deployment.md  features.md  forensic_reporting.md  gnn_architecture.md  graph_features.md  hyperparameter_optimisation.md  incident_response.md  load_testing.md  model_rollback_runbook.md  monitoring.md  mpc_fraud_detection.md  regulatory_reporting.md  security.md  sequence_model_architecture.md  streaming_architecture.md  training_data.md  zk_attestation.md
features/: feature_pipeline.py  ohlcv_features.py
ingestion/: __init__.py  avro_codec.py  data_models.py  historical_loader.py  horizon_streamer.py  kafka_producer.py
integrations/: soroban_event_listener.py  zk_attestor.py
models/: README.md
monitoring/: README.md  alert_rules.yml
notebooks/: benford_explainer.ipynb
reporting/: fatf_exporter.py  fatf_risk_codes.py
reports/: load_test_sample.json
scripts/: README.md  adversarial_training_loop.py  check_env.py  check_mutation_score.py  compute_feature_ranges.py  evaluate_simulator_realism.py  stream.py  (+15 more)
(+86 files in other folders)
