[project]
name = "ledgerlens-data"
version = "0.2.0"
description = "Data ingestion, fraud-detection engine, and feature pipeline for LedgerLens"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_return_any = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: marks tests as live Testnet integration tests (deselect with '-m not integration')",
    "slow: marks tests that run PPO training (deselect with '-m not slow')",
]

# ---------------------------------------------------------------------------
# mutmut — mutation testing configuration
# ---------------------------------------------------------------------------
# Run with: make mutation-test
# Or manually: mutmut run --paths-to-mutate detection/benford_engine.py,...
# ---------------------------------------------------------------------------
[tool.mutmut]
# Limit mutation scope to the core scoring path — keeps CI runtime under 15 min.
# detection/model_inference.py is intentionally excluded here: it has heavy
# integration fixtures (train_models, tmp_path_factory) that make mutmut's
# subprocess-based runner very slow. The Makefile target passes it explicitly
# via --paths-to-mutate instead so we can time-box it separately.
paths_to_mutate = "detection/benford_engine.py,detection/feature_engineering.py"
tests_dir = "tests/"
# Run only the fast unit tests during mutation (skip integration + slow marks)
runner = "python -m pytest -x -q --timeout=30 -m 'not integration and not slow' tests/test_benford.py tests/test_benford_ci.py tests/test_feature_engineering.py tests/test_model_inference.py"
# Do not mutate import blocks, type annotations, or docstrings
dict_synonyms = ""
# Avoid mutating auto-generated files or vendored code
exclude_list = "tests/,scripts/,data/"
